cp: 	PR c++/11596 	* pt.c (maybe_fold_nontype_arg, maybe_fold_nontype_args): Remove. 	(tsubst_template_arg): New. 	(tsubst_template_arg_vector): Rename to ... 	(tsubst_template_args): ... this. Accept a TREE_LIST form. Use 	tsubst_template_arg. 	(coerce_template_parms): Use tsubst_template_arg for default 	value. 	(tsubst_template_parms): Likewise. 	(tsubst_aggr_type): Adjust. 	(tsubst_decl): Likewise. 	(tsubst): Use tsubst_template_arg for a DOMAIN. Adjust. 	(tsubst_copy) <TEMPLATE_ID_EXPR case>: Use tsubst_template_args. testsuite: 	PR 11596 	* g++.dg/template/defarg3.C: New test.

* g++.dg/ext/packed2.C: Pack member struct too. Explain why.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@69776 138bc75d-0d04-0410-961f-82ee72b054a4